Wrap function to canonicalize long paths

--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -141,7 +141,7 @@
         "only": "windows",
         "headers": "calibre/utils/windows/common.h",
         "sources": "calibre/utils/windows/winutil.cpp",
-        "libraries": "shell32 wininet advapi32",
+        "libraries": "shell32 wininet advapi32 Pathcch",
         "cflags": "/X"
     },
     {
