--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -180,6 +180,12 @@
         "ldflags": "-framework Cocoa"
     },
     {
+        "name": "espeak",
+        "only": "linux haiku",
+        "sources": "calibre/utils/tts/espeak.cpp",
+        "libraries": "espeak-ng"
+    },
+    {
         "name": "libusb",
         "only": "macos linux haiku",
         "sources": "calibre/devices/libusb/libusb.c",
