--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: [ubuntu-latest, macos-latest, windows-2016]
+                os: [ubuntu-latest, macos-latest, windows-latest]
         steps:
             - name: Checkout source code
               uses: actions/checkout@master
