--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -28,7 +28,7 @@ jobs:
 
             - name: Install translations dependencies
               run:
-                python -m pip install -U transifex-client sphinx
+                python -m pip install 'urllib3<1.26' transifex-client sphinx
 
             - name: Update translations
               env:
