--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ resources/viewer.html
 resources/content-server/index-generated.html
 resources/content-server/locales.zip
 resources/mathjax
+resources/fonts/liberation
 resources/mozilla-ca-certs.pem
 resources/user-agent-data.json
 icons/icns/*.iconset
