--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,25 +39,24 @@ jobs:
             env:
                 CI: 'true'
         steps:
-            - name: Install calibre dependencies
+            - name: Prepare the container
               run: |
-                set -xe
-                useradd -m ci
                 pacman -Syu --noconfirm
-                pacman -S --noconfirm --needed base-devel sudo git sip5 pyqt-builder chmlib icu jxrlib hunspell libmtp libusb libwmf optipng podofo python-apsw python-beautifulsoup4 python-cssselect python-css-parser python-dateutil python-dbus python-dnspython python-dukpy python-feedparser python-html2text python-html5-parser python-lxml python-markdown python-mechanize python-msgpack python-netifaces python-unrardll python-pillow python-psutil python-pygments python-pyqt5 python-regex python-zeroconf python-pyqtwebengine qt5-x11extras qt5-svg qt5-imageformats udisks2 hyphen python-pychm python-pycryptodome speech-dispatcher
+                pacman -S --noconfirm tar
 
             - name: Checkout source code
               uses: actions/checkout@master
               with:
                 fetch-depth: 10
 
+            - name: Install calibre dependencies
+              run: setup/arch-ci.sh
+
             - name: Bootstrap calibre
-              run: |
-                  chown -R ci:users $GITHUB_WORKSPACE
-                  runuser -u ci -- python setup.py bootstrap --ephemeral
+              run: runuser -u ci -- python setup.py bootstrap --ephemeral
 
             - name: Test calibre
               run: |
+                  set -xe
                   runuser -u ci -- python setup.py test
                   runuser -u ci -- python setup.py test_rs
-                  chmod +777 .git .git/config
