--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -9,30 +9,32 @@ jobs:
         name: Update translations on Transifex
         if: github.repository == 'kovidgoyal/calibre'
         runs-on: ubuntu-latest
+        container:
+            image: 'archlinux/base:latest'
+            env:
+                CI: 'true'
         steps:
+            - name: Prepare the container
+              run: |
+                pacman -Syu --noconfirm
+                pacman -S --noconfirm tar
+
             - name: Checkout source code
               uses: actions/checkout@master
               with:
                 fetch-depth: 2
 
-            - name: Checkout translations
-              uses: actions/checkout@master
-              with:
-                repository: 'kovidgoyal/calibre-translations'
-                path: 'translations'
-
-            - name: Set up Python
-              uses: actions/setup-python@master
-              with:
-                python-version: 3.8
+            - name: Install calibre dependencies
+              run: setup/arch-ci.sh
 
             - name: Install translations dependencies
-              run:
-                python -m pip install 'urllib3<1.26' transifex-client sphinx
+              run: python -m pip install transifex-client
+
+            - name: Bootstrap calibre
+              run: runuser -u ci -- python setup.py bootstrap --ephemeral
 
             - name: Update translations
               env:
                 tx: ${{ secrets.tx }}
-                CI: "true"
-              run:
-                  python setup/unix-ci.py pot
+              run: |
+                  runuser -u ci -- python setup/unix-ci.py pot
