--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -7,7 +7,7 @@ on:
 jobs:
     Push-To-Transifex:
         name: Update translations on Transifex
-        if: github.repository == 'kovidgoyal/calibre'
+        if: github.repository == 'kovidgoyal/calibre-disabled-because-arch-not-running-in-docker'
         runs-on: ubuntu-latest
         container:
             image: 'archlinux/base:latest'
