--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,32 +31,38 @@ jobs:
               run:
                   python setup/unix-ci.py test
 
-    # archtest:
-    #     name: Test on Arch
-    #     runs-on: ubuntu-latest
-    #     container:
-    #         image: 'archlinux/base:latest'
-    #         env:
-    #             CI: 'true'
-    #     steps:
-    #         - name: Prepare the container
-    #           run: |
-    #             pacman -Syu --noconfirm
-    #             pacman -S --noconfirm tar
-    #
-    #         - name: Checkout source code
-    #           uses: actions/checkout@master
-    #           with:
-    #             fetch-depth: 10
-    #
-    #         - name: Install calibre dependencies
-    #           run: setup/arch-ci.sh
-    #
-    #         - name: Bootstrap calibre
-    #           run: runuser -u ci -- python setup.py bootstrap --ephemeral
-    #
-    #         - name: Test calibre
-    #           run: |
-    #               set -xe
-    #               runuser -u ci -- python setup.py test
-    #               runuser -u ci -- python setup.py test_rs
+    archtest:
+        name: Test on Arch
+        runs-on: ubuntu-latest
+        container:
+            image: 'archlinux/base:latest'
+            env:
+                CI: 'true'
+        steps:
+            - name: Setup container
+              # WORKAROUND for glibc 2.33 and old Docker
+              # See https://github.com/actions/virtual-environments/issues/2658
+              # Thanks to https://github.com/lxqt/lxqt-panel/pull/1562
+              run: |
+                patched_glibc=glibc-linux4-2.33-4-x86_64.pkg.tar.zst
+                curl -LO "https://repo.archlinuxcn.org/x86_64/$patched_glibc"
+                bsdtar -C / -xf "$patched_glibc"
+                pacman -Syu --noconfirm --ignore glibc
+                pacman -S --noconfirm tar
+
+            - name: Checkout source code
+              uses: actions/checkout@master
+              with:
+                fetch-depth: 10
+
+            - name: Install calibre dependencies
+              run: setup/arch-ci.sh
+
+            - name: Bootstrap calibre
+              run: runuser -u ci -- python setup.py bootstrap --ephemeral
+
+            - name: Test calibre
+              run: |
+                  set -xe
+                  runuser -u ci -- python setup.py test
+                  runuser -u ci -- python setup.py test_rs
