--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -116,6 +116,7 @@
     },
     {
         "name": "fast_css_transform",
+        "headers": "calibre/utils/cpp_binding.h",
         "sources": "calibre/srv/fast_css_transform.cpp",
 		"inc_dirs": "perfect-hashing",
 		"needs_c++14": true
@@ -145,7 +146,7 @@
     {
         "name": "winutil",
         "only": "windows",
-        "headers": "calibre/utils/windows/common.h",
+        "headers": "calibre/utils/cpp_binding.h calibre/utils/windows/common.h",
         "sources": "calibre/utils/windows/winutil.cpp",
         "libraries": "shell32 wininet advapi32",
         "cflags": "/X"
@@ -153,7 +154,7 @@
     {
         "name": "winsapi",
         "only": "windows",
-        "headers": "calibre/utils/windows/common.h",
+        "headers": "calibre/utils/cpp_binding.h calibre/utils/windows/common.h",
         "sources": "calibre/utils/windows/winsapi.cpp",
         "libraries": "SAPI Ole32",
         "cflags": "/X"
@@ -162,7 +163,7 @@
         "name": "wpd",
         "only": "windows",
         "sources": "calibre/devices/mtp/windows/utils.cpp calibre/devices/mtp/windows/device_enumeration.cpp calibre/devices/mtp/windows/content_enumeration.cpp calibre/devices/mtp/windows/device.cpp calibre/devices/mtp/windows/wpd.cpp",
-        "headers": "calibre/devices/mtp/windows/global.h calibre/utils/windows/common.h",
+        "headers": "calibre/utils/cpp_binding.h calibre/devices/mtp/windows/global.h calibre/utils/windows/common.h",
         "libraries": "ole32 oleaut32 portabledeviceguids user32",
         "cflags": "/X"
     },
