Start adding RAII to content_enumeration.cpp

--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -162,7 +162,7 @@
     {
         "name": "wpd",
         "only": "windows",
-        "sources": "calibre/devices/mtp/windows/utils.cpp calibre/devices/mtp/windows/device_enumeration.cpp calibre/devices/mtp/windows/content_enumeration.cpp calibre/devices/mtp/windows/device.cpp calibre/devices/mtp/windows/wpd.cpp",
+        "sources": "calibre/devices/mtp/windows/device_enumeration.cpp calibre/devices/mtp/windows/content_enumeration.cpp calibre/devices/mtp/windows/device.cpp calibre/devices/mtp/windows/wpd.cpp",
         "headers": "calibre/utils/cpp_binding.h calibre/devices/mtp/windows/global.h calibre/utils/windows/common.h",
         "libraries": "ole32 oleaut32 portabledeviceguids user32",
         "cflags": "/X"
