--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -72,6 +72,11 @@
         "inc_dirs": "!sqlite_inc_dirs"
     },
     {
+        "name": "sqlite_extension",
+        "sources": "calibre/db/sqlite_extension.cpp",
+        "inc_dirs": "!sqlite_inc_dirs"
+    },
+    {
         "name": "lzx",
         "sources": "calibre/utils/lzx/lzxmodule.c calibre/utils/lzx/compressor.c calibre/utils/lzx/lzxd.c calibre/utils/lzx/lzc.c calibre/utils/lzx/lzxc.c",
         "inc_dirs": "calibre/utils/lzx",
