Dont use designated initializers

--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -74,8 +74,7 @@
     {
         "name": "sqlite_extension",
         "sources": "calibre/db/sqlite_extension.cpp",
-        "inc_dirs": "!sqlite_inc_dirs",
-		"needs_c++14": true
+        "inc_dirs": "!sqlite_inc_dirs"
     },
     {
         "name": "lzx",
