Implement the unicode61 tokenizer with ICU
Still have to implement removal of diacritics

--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -74,7 +74,10 @@
     {
         "name": "sqlite_extension",
         "sources": "calibre/db/sqlite_extension.cpp",
-        "inc_dirs": "!sqlite_inc_dirs"
+        "libraries": "icudata icui18n icuuc icuio",
+        "windows_libraries": "icudt icuin icuuc icuio",
+        "lib_dirs": "!icu_lib_dirs",
+        "inc_dirs": "!icu_inc_dirs !sqlite_inc_dirs"
     },
     {
         "name": "lzx",
