Forgot to add header to extension definition

--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -125,7 +125,7 @@
     },
     {
         "name": "fast_css_transform",
-        "headers": "calibre/utils/cpp_binding.h",
+        "headers": "calibre/utils/cpp_binding.h calibre/utils/stb_sprintf.h",
         "sources": "calibre/srv/fast_css_transform.cpp",
 		"inc_dirs": "perfect-hashing",
 		"needs_c++14": true
