Function to get available locales for break iteration

--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -73,6 +73,7 @@
     },
     {
         "name": "sqlite_extension",
+        "headers": "calibre/utils/cpp_binding.h",
         "sources": "calibre/db/sqlite_extension.cpp",
 		"needs_c++11": true,
         "libraries": "icudata icui18n icuuc icuio",
