Switch from cchardet to uchardet
cchardet is not maintained anymore: https://github.com/PyYoshi/cChardet/issues/77

cchardet is based on uchardet with the addition of reporting encoding
detection confidence. We dont really need that, so moving to uchardet is
simplest.

See #1690 (Low effort port to charset_normalizer)

--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -17,6 +17,13 @@
 		"needs_c99": true
     },
     {
+        "name": "uchardet",
+        "sources": "calibre/ebooks/uchardet.c",
+        "libraries": "!uchardet_libs",
+        "inc_dirs": "!uchardet_inc_dirs",
+        "lib_dirs": "!uchardet_lib_dirs"
+    },
+    {
         "name": "unicode_names",
         "headers": "unicode_names/names.h unicode_names/data-types.h",
         "sources": "unicode_names/unicode_names.c",
