--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -190,7 +190,7 @@
         "headers": "calibre/utils/cpp_binding.h calibre/utils/windows/common.h",
         "sources": "calibre/utils/windows/winspeech.cpp",
         "libraries": "WindowsApp",
-        "cflags": "/X /std:c++17 /bigobj /await /permissive- /WX /Zc:twoPhase-"
+        "cflags": "/X /std:c++17 /Zc:__cplusplus /bigobj /await /permissive- /WX /Zc:twoPhase-"
     },
     {
         "name": "wpd",
