--- a/bypy/windows.conf
+++ b/bypy/windows.conf
@@ -1,4 +1,7 @@
 # Requires installation of Visual Studio 2019 Community Edition, WiX Toolset, Git, Ruby, NodeJS, Python (2 and 3) and Perl
+# Windows SDK >= 10.0.20348.0 which can be installed by downloading the ISO from
+# https://developer.microsoft.com/en-us/windows/downloads/windows-sdk/ and running
+# ./WinSDKSetup.exe /features "OptionId.UWPCpp" "OptionId.DesktopCPPx64" "OptionId.DesktopCPPx86" "OptionID.DesktopCPPARM" "OptionID.DesktopCPPARM64" /q
 # git.exe must be in PATH. Must have ~120GB available disk space and 8GB RAM
 # Install certifi in python 3 with:
 # py.exe -m pip install certifi
