--- a/bypy/windows.conf
+++ b/bypy/windows.conf
@@ -2,7 +2,7 @@
 # Windows SDK >= 10.0.20348.0 which can be installed by downloading the ISO from
 # https://developer.microsoft.com/en-us/windows/downloads/windows-sdk/ and running
 # ./WinSDKSetup.exe /features "OptionId.UWPCpp" "OptionId.DesktopCPPx64" "OptionId.DesktopCPPx86" "OptionID.DesktopCPPARM" "OptionID.DesktopCPPARM64" /q
-# git.exe must be in PATH. Must have ~120GB available disk space and 8GB RAM
+# git.exe must be in PATH. Must have ~120GB available disk space and 24GB RAM (with 4 threads) to build Qt WebEngine
 # Install certifi in python 3 with:
 # py.exe -m pip install certifi
 # Note that python2 is needed to build Qt WebEngine
