Change the macOS VM to a Big Sur based one since Qt WebEngine 6.4 needs XCode 13 which needs Big Sur

--- a/bypy/macos.conf
+++ b/bypy/macos.conf
@@ -1,7 +1,7 @@
 # Requires installation of XCode 10.3 and Python 3 and
 # python3 -m pip install certifi html5lib
 
-vm_name 'macos-calibre-qt6'
+vm_name 'macos-calibre'
 root '/Users/Shared/calibre-build'
 python '/usr/local/bin/python3'
 universal 'true'
