--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -120,11 +120,11 @@
         "name": "podofo",
         "sources": "calibre/utils/podofo/utils.cpp calibre/utils/podofo/output.cpp calibre/utils/podofo/doc.cpp calibre/utils/podofo/outline.cpp calibre/utils/podofo/fonts.cpp calibre/utils/podofo/impose.cpp calibre/utils/podofo/images.cpp calibre/utils/podofo/outlines.cpp calibre/utils/podofo/podofo.cpp",
         "headers": "calibre/utils/podofo/global.h",
-        "libraries": "podofo",
+        "libraries": "!podofo",
         "lib_dirs": "!podofo_lib_dirs",
         "inc_dirs": "!podofo_inc_dirs",
         "error": "!podofo_error",
-		"needs_c++": "11"
+		"needs_c++": "17"
     },
     {
         "name": "html_as_json",
