See if running test_rs fixes the interminable hang in Arch CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,4 +67,5 @@ jobs:
               run: |
                   set -xe
                   runuser -u ci -- python setup.py test --under-sanitize
-                  runuser -u ci -- python setup.py test_rs
+                  echo "Running test_rs"
+                  runuser -u ci -- python setup.py test_rs --under-sanitize
