--- a/bypy/macos.conf
+++ b/bypy/macos.conf
@@ -1,7 +1,9 @@
-# Requires installation of XCode 13.2.1 and Python 3 and
+# Requires installation of XCode 15 and Python 3 and
 # python3 -m pip install certifi html5lib
 
 vm_name 'macos-calibre'
 root '/Users/Shared/calibre-build'
-python '/usr/local/bin/python3'
+python '/usr/bin/python3'
+rsync '/opt/homebrew/bin/rsync'
+deploy_target '10.15'
 universal 'true'
