Update VM definitions

--- a/bypy/macos.conf
+++ b/bypy/macos.conf
@@ -1,9 +1,9 @@
-# Requires installation of XCode 15 and Python 3 and
+# Requires installation of XCode 15 and
 # python3 -m pip install certifi html5lib
 
 vm_name 'macos-calibre'
 root '/Users/Shared/calibre-build'
 python '/usr/bin/python3'
-rsync '/opt/homebrew/bin/rsync'
+rsync '/usr/local/bin/rsync'
 deploy_target '11.0'
 universal 'true'
