--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -139,6 +139,13 @@
 		"needs_c++": "14"
     },
     {
+        "name": "fast_html_entities",
+        "headers": "calibre/utils/cpp_binding.h calibre/utils/stb_sprintf.h",
+        "sources": "calibre/ebooks/html_entities.cpp",
+		"inc_dirs": "perfect-hashing",
+		"needs_c++": "14"
+    },
+    {
         "name": "rcc_backend",
         "sources": "calibre/utils/rcc/rcc.cpp",
         "headers": "calibre/utils/rcc/rcc.h",
