--- a/setup/extensions.json
+++ b/setup/extensions.json
@@ -17,6 +17,14 @@
 		"needs_c": "99"
     },
     {
+        "name": "ffmpeg",
+        "sources": "calibre/utils/ffmpeg.c",
+		"libraries": "avcodec avutil swresample",
+        "inc_dirs": "!ffmpeg_inc_dirs",
+        "lib_dirs": "!ffmpeg_lib_dirs",
+		"needs_c": "99"
+    },
+    {
         "name": "uchardet",
         "sources": "calibre/ebooks/uchardet.c",
         "libraries": "!uchardet_libs",
